--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,3 @@
 ---
-logstash_version: "1.4.2-1-2c0f5a1"
-logstash_contrib_version: "1.4.2-1-efd53ef"
-logstash_disable_logstash_web: True
+logstash_version: "1:2.2.1-1"
+logstash_short_version: "2.2"
