--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,20 +1,15 @@
 ---
-- name: Configure Logstash APT key
-  apt_key: url=http://packages.elasticsearch.org/GPG-KEY-elasticsearch state=present
+- name: Configure Elastic APT key
+  apt_key: url=https://packages.elastic.co/GPG-KEY-elasticsearch
+           state=present
 
-- name: Configure the Logstash APT repositories
-  apt_repository: repo="deb http://packages.elasticsearch.org/logstash/1.4/debian stable main" state=present
+- name: Configure the Elastic APT repositories
+  apt_repository: repo="deb http://packages.elastic.co/logstash/{{ logstash_short_version }}/debian stable main"
+                  state=present
 
 - name: Install Logstash
-  apt: pkg={{ item }} state=present update_cache=yes
-  with_items:
-    - logstash={{ logstash_version }}
-    - logstash-contrib={{ logstash_contrib_version }}
+  apt: pkg="logstash={{ logstash_version }}"
+       state=present
 
-- name: Stop Logstash Web service
-  service: name=logstash-web state=stopped
-  when: logstash_disable_logstash_web | bool
-
-- name: Remove Logstash Web service
-  file: path=/etc/init/logstash-web.conf state=absent
-  when: logstash_disable_logstash_web | bool
+- name: Enable the Logstash service
+  service: name=logstash enabled=yes
